--- a/RemoteController/TrainRemote/platformio.ini
+++ b/RemoteController/TrainRemote/platformio.ini
@@ -13,8 +13,11 @@ platform = espressif32
 board = lolin32_lite
 framework = arduino
 lib_deps = 
-    SPI
+	SPI
 	adafruit/Adafruit SSD1306@^2.5.7
 	adafruit/Adafruit GFX Library@^1.11.7
 	adafruit/Adafruit BusIO@^1.14.3
+	nrf24/RF24@^1.4.7
+	locoduino/Commanders@^2.0.1
+	locoduino/DIO2@^1.6.0
 monitor_speed = 115200
